update startServer script